[update] アカウント別料金の追加

--- a/src/popup.html
+++ b/src/popup.html
@@ -13,6 +13,9 @@
     <div>
       <button id="service">サービス別料金</button>
     </div>
+    <div>
+      <button id="account" style="margin-top: 5px;">アカウント別料金</button>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
